manifests/media/unmanic/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unmanic
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: unmanic
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: unmanic
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      restartPolicy: Always
      containers:
        - name: unmanic
          image: josh5/unmanic:latest@sha256:36a705923193db6b8ca7abd5b57b81a7309d04aedd320ec0ef4e9ac5970be885
          ports:
            - containerPort: 8888
              protocol: TCP
              name: http
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
            runAsNonRoot: true
          volumeMounts:
            - name: unmanic-config
              mountPath: /config
            - name: tmp
              mountPath: /tmp
            - name: media
              mountPath: /media
          livenessProbe:
            tcpSocket:
              port: 8888
          readinessProbe:
            tcpSocket:
              port: 8888
      volumes:
        - name: unmanic-config
          persistentVolumeClaim:
            claimName: unmanic-config
        - name: tmp
          emptyDir: {}
        - name: media
          persistentVolumeClaim:
            claimName: media
