manifests/media/unmanic/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unmanic
  namespace: media
spec:
  selector:
    app: unmanic
  ports:
    - name: http
      port: 8888
      targetPort: 8888
