manifests/media/unmanic/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: unmanic
  namespace: media
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: cilium
  hostnames:
    - unmanic.cluster.nelsondane.com
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: unmanic
          port: 8888
